Fix nav on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,17 @@ nav {
     padding: 15px;
     text-align: center;
     font-family: 'Inter', sans-serif;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    row-gap: 15px;
+    column-gap: 30px;
 }
 
 nav a {
     color: white;
-    margin: 0 15px;
     text-decoration: none;
     font-weight: bold;
 }
